--- a/package.yml
+++ b/package.yml
@@ -1,47 +1,47 @@
-package: blaupause # Addon-Key, ggf. wie er bei MyREDAXO hinterlegt ist.
-version: '2.0.0-dev' # Aktuelle Version. 
-author: 'Alexander Walther' # Name(n) der Autoren, wird im Installer gezeigt
-supportpage: https://github.com/alexplusde/blaupause # Support-Seite, wird im Installer gezeigt
-# load: late 
+package: product
+version: '2.0.0'
+author: 'Alexander Walther'
+supportpage: https://github.com/alexplusde/product/
 
-requires:                       # Abhängigkeiten definieren, z.B.
+requires:
     php:
         version: '>7.3,<9'
-    redaxo: ^5.13              # REDAXO Core-Version
-    packages:                  # Plugins und Addons
-        yform: "^4"
-#       cronjob: ">1"
-#       metainfo: ">2"
+    redaxo: ^5.10
+    packages:
+        yform: ">=3.4"
+        yform_field: ">1"
+
 
 page:
-    title: translate:blaupause_title    # Übersetzung definieren in lang/de_de.lang
-    prio: 100                       # Reihenfolge in Relation zur Prio anderer Menüeinträge 
-    icon: rex-icon fa-gear
-
-pages:
-    blaupause: # key, unter dem die Seite zu finden sein wird. Passende Datei im Addon-Verzeichnis `pages/blaupause.blaupausepage.php` muss vorhanden sein.
-        title: translate:blaupause_title
-#        main: true                 
-        block: system               # 'system', um ins Hauptmenü zu verschieben, oder 'blaupause', um eigenen blaupause-Abschnitt zu erstellen. Weglassen, um bei den Addons gelistet zu werden 
-        prio: 15                    # Reihenfolge in Abhängigkeit anderer Addons
-        icon: rex-icon fa-calendar  # Icon neben dem Menüpunkt
-        perm: blaupause[]               # Berechtigung, die einer Rolle zugewiesen werden kann. z.B. `admin` für Admin, oder `blaupause['xyz']` für dein eigenes Addon
-        subpages:                   # Automatisches Untermenü unterhalb des Reisters von `blaupausepage` erzeugen
-            table:
-                title: translate:blaupause_table
-                icon: rex-icon fa-gear
-                perm: blaupause[]
-            settings:
-                title: translate:blaupause_settings
-                icon: rex-icon fa-gear
-                itemclass: pull-right
-                perm: admin
-            docs:
-                title: translate:blaupause_docs
-                subPath: README.md  # Gibt anstelle einer Seite unter `pages` die README.md des Addons aus
-                icon: rex-icon fa-info-circle
-                itemclass: pull-right
-                perm: blaupause[docs]
+    title: translate:product
+    main: true
+    block: system
+    prio: 19
+    icon: rex-icon fa-cube
+    perm: product[]
+    subpages: 
+        category:
+            title: translate:product_category
+            icon: rex-icon fa-cube
+            perm: product[category]
+        product:
+            title: translate:product
+            icon: rex-icon fa-cube
+            perm: product[product]
+        variant:
+            title: translate:product_variant
+            icon: rex-icon fa-cube
+            perm: product[variant]
+        settings:
+            title: translate:product_settings
+            icon: rex-icon fa-gear
+            itemclass: pull-right
+            perm: admin
+        docs:
+            title: translate:product_docs
+            subPath: README.md
+            icon: rex-icon fa-info-circle
+            itemclass: pull-right
+            perm: product[docs]
 
 default_config:
-    field: 'Test' # Bei der Installation belegt REDAXO automatisch in der rex_config-Tabelle im Namespace `blaupause` im Feld `field` den Wert `Test` 
