--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: product
-version: '2.0.2'
+version: '3.0.0-beta1'
 author: 'Alexander Walther'
 supportpage: https://github.com/alexplusde/product/
 
