--- a/package.yml
+++ b/package.yml
@@ -46,3 +46,4 @@ page:
 default_config:
     'default_thumbnail': "product_fallback_image.png"
     'use_own_model': 0
+    'editor': 'class="form-control redactor-editor--default"'
